changing google maps api link to https

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- Icon designed by Azis Hertanto — see http://thenounproject.com/azisher/ -->
     <meta name="viewport" content="width=device-width"> 
 	<link href="style/style.css" type="text/css" rel="stylesheet">
-	<script src="http://maps.googleapis.com/maps/api/js?sensor=true"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
 </head>
 <body>
 
